--- a/index.html
+++ b/index.html
@@ -27,12 +27,24 @@
       <button id="refresh">Refresh Data</button>
     </section>
 
-    <!-- Price Cards -->
-    <section class="cards" id="price-cards">
-      <!-- JS will populate Gold & Silver cards dynamically -->
+    <!-- Top AI Insights -->
+    <section id="top-insights">
+      <h2>🌟 Top AI Insights</h2>
+      <ul id="top-insights-list"></ul>
     </section>
 
-    <!-- Analytics Insights -->
+    <!-- Price Cards -->
+    <section class="cards" id="price-cards">
+      <!-- JS populates Gold & Silver cards dynamically -->
+    </section>
+
+    <!-- Weekly Summary -->
+    <section id="weekly-summary">
+      <h2>📅 Weekly Summary</h2>
+      <div class="cards" id="weekly-cards"></div>
+    </section>
+
+    <!-- AI Insights -->
     <section id="ai-insights">
       <h2>🤖 AI Insights</h2>
       <ul id="insights-list"></ul>
