--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Metals Dashboard</title>
+  <title>Metals Analytics Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts -->
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <h1>Metals Analytics Dashboard</h1>
+    <h1>📊 Metals Analytics Dashboard</h1>
     <p>Gold & Silver prices, news, AI insights — Free & Open Source</p>
   </header>
 
@@ -36,6 +36,7 @@
       <button id="refresh">Refresh</button>
     </section>
 
+    <!-- Correct ID for cards -->
     <section id="cards-container" class="cards"></section>
 
     <section class="chart-section">
